# rosrtabmap

src/config/: SLAMconfig.rviz  cam1.yaml  cam2.yaml  camera.yaml
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/custom_msgs/install/custom_msgs/include/custom_msgs/custom_msgs/msg/: quaternion.h  quaternion.hpp
src/custom_msgs/install/custom_msgs/include/custom_msgs/custom_msgs/srv/: publish_to_rio.h  publish_to_rio.hpp
src/custom_msgs/install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh
src/custom_msgs/install/custom_msgs/share/custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_msgs__rosidl_typesupport_cppExport.cmake  custom_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_custom_msgs__rosidl_generator_cExport.cmake  export_custom_msgs__rosidl_typesupport_fastrtps_cExport.cmake
src/custom_msgs/install/custom_msgs/share/custom_msgs/msg/: Pose3D.idl  Pose3DStamped.idl  Pose3DStamped.msg
src/custom_msgs/install/custom_msgs/share/custom_msgs/srv/: GetFromRio_Response.msg  Gstam.idl  Gstam_Response.msg  PublishToRio.idl  PublishToRio_Request.msg  PublishToRio_Response.msg
src/custom_msgs/log/: latest_build
src/custom_msgs/msg/install/: local_setup.sh  setup.sh
src/custom_msgs/msg/log/: latest_build
src/custom_msgs/srv/: PublishToRio.srv
src/launch/: camera.launch copy.py  camera.launch.py  camera_example.launch.py  out.txt  rtabmap.launch copy.py  rtabmap.launch.py  rtabmap_example.launch.py  testLaunch.py
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: networkTables.cpp  rioGetter.cpp  rioPublish.cpp
(+44 files in other folders)
